# ancdotario-user-service

./: .coveragerc  .pre-commit-config.yaml  .samignore  AWS_SAM_PIPELINE_TROUBLESHOOTING.md  CLAUDE.md  JWT_AUTHORIZER_MIGRATION.md  Makefile  README.md  check-prerequisites.sh  check_function_coverage.sh  coverage_report.sh  coverage_simple.sh  deploy-pipeline.sh  openapi.yaml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_coverage.sh  samconfig-dev.toml  samconfig-prod.toml  samconfig-staging.toml  samconfig.toml.backup  setup-pipeline.md  swagger.yaml  template.yaml
.github/workflows/: deploy.yml
batch-delete/: app.py  requirements.txt
batch-delete/tests/unit/: test_app.py
events/: batch-delete-event.json  health-test-mode-event.json
health-test-mode/: README.md  app.py  test_local.py
health-test-mode/tests/unit/: test_health.py
hello-world/: app.py  requirements.txt
hello-world/models/: __init__.py  user.py
hello-world/tests/integration/: test_api_integration.py
hello-world/tests/unit/: test_handler.py  test_handler_comprehensive.py  test_security.py  test_validation.py
hello-world/utils/: security.py  validation.py
nickname-validate/: app.py  requirements.txt
nickname-validate/tests/unit/: test_app.py
photo-delete/: app.py  requirements.txt
photo-refresh/: app.py  requirements.txt
photo-refresh/events/: refresh-event.json
photo-upload/: TEST_RESULTS.md  app.py  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh
photo-upload/tests/: conftest.py
photo-upload/tests/integration/: test_api_contracts.py
photo-upload/tests/unit/: test_handler.py  test_photo_upload_basic.py  test_photo_upload_comprehensive.py
pipeline/: buildspec.yml  deploy-dev-buildspec.yml  deploy-prod-buildspec.yml  deploy-staging-buildspec.yml  pipeline-template.yaml
scripts/: find-cognito-values.sh  setup-parameters.sh  test-parameters.py
shared/: .env.defaults  .env.dev  .env.prod  .env.staging  __init__.py  auth.py  auth_simplified.py  config.py
shared/models/: __init__.py  user.py
src/models/: User.js
user-create/: __init__.py  app.py
user-create/tests/: __init__.py
user-create/tests/unit/: test_handler.py
user-delete/: __init__.py  app.py  requirements.txt
user-delete/events/: delete-user-event.json
user-delete/tests/: __init__.py
user-delete/tests/unit/: test_handler.py
user-lookup/: __init__.py  app.py  requirements.txt
user-lookup/tests/unit/: test_handler.py
